# rust-try-out

./: Cargo.toml
migrations/: V1__create_team_members_and_work_days.sql
src/: main.rs  models.rs  routes.rs
src/db/: db.rs
src/handlers/: mod.rs  team_member.rs  workday.rs
