[package]
name = "sprint_calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.2", features = ["postgres", "chrono", "runtime-tokio-native-tls", "uuid"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-postgres = "0.7"
refinery = { version = "0.8.14", features = ["tokio-postgres"] }
axum = "0.8.0-rc.1"
hyper = "1.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
tracing = "0.1.41"